# TeleBot

./: .gitignore  Makefile  bot.db  pyproject.toml
telebot/: __init__.py  admin.py  client.py  create_bot.py  main.py
telebot/database/: sqlite_db.py
telebot/keyboard/: admin_kb.py  client_kb.py
